@@ -285,23 +285,22 @@ $swap_mount
 					local string_options=',rw'
 					(( ${aDRIVE_ISREADONLY_CURRENTLY[$INDEX_INIT_CURRENT_DEVICE]} )) && string_options=',ro'
 
-					# - UUID or PARTUUID entry?
+					# - Root/BootFS dependant flags
+					#	On RPi we need to use PARTUUID for Root/BootFS
 					local dev_entry="UUID=${aDRIVE_UUID[$INDEX_INIT_CURRENT_DEVICE]}"
-					if (( $G_HW_MODEL < 10 )) && [[ ${aDRIVE_MOUNT_TARGET[$INDEX_INIT_CURRENT_DEVICE]} =~ ^/(boot)?$ ]]; then
-
-						dev_entry="PARTUUID=${aDRIVE_PART_UUID[$INDEX_INIT_CURRENT_DEVICE]}"
-
-					fi
-
-					# - Non-RootFS flags
-					#	fsck flag for root device, to allow check on reboot
-					#	nofail: Allow boot to continue, if mount fails
+					#	fsck flag for RootFS, to allow check on reboot and for BootFS, since corruption here is most critical and fsck finishes in no time
+					#	nofail: Allow boot to continue, if mount fails, not wanted for Root/BootFS
 					#	x-systemd.automount: [ 1166.110202] systemd-fstab-generator[3512]: Ignoring automount option for root device
-					local fsck_flag=1
-					if [[ ${aDRIVE_MOUNT_TARGET[$INDEX_INIT_CURRENT_DEVICE]} != '/' ]]; then
+					#		/boot is removed from local-fs.target by this (on Buster only?), allowing it to mount after RAMdisk starts and unmount before it stops.
+					local fsck_flag=0
+					if [[ ${aDRIVE_MOUNT_TARGET[$INDEX_INIT_CURRENT_DEVICE]} =~ ^/(boot)?$ ]]; then
+
+						(( $G_HW_MODEL < 10 )) && dev_entry="PARTUUID=${aDRIVE_PART_UUID[$INDEX_INIT_CURRENT_DEVICE]}"
+						fsck_flag=1
+
+					else
 
 						string_options+=',nofail,x-systemd.automount'
-						fsck_flag=0
 
 					fi
 
