@@ -1518,6 +1518,12 @@ Pin-Priority: -1' > /etc/apt/preferences.d/dietpi-docker_fix
 			[[ -f /etc/systemd/system/getty@tty1.service.d/autologin.conf ]] && mv /etc/systemd/system/getty@tty1.service.d/autologin.conf /etc/systemd/system/getty@tty1.service.d/dietpi-autologin.conf
 			# - README.md: https://github.com/Fourdee/DietPi/pull/2341
 			[[ -f /boot/README.md ]] && mv /boot/README.md /boot/dietpi-README.md
+			# - kill-ssh-user-sessions-before-network: https://github.com/Fourdee/DietPi/pull/2357/commits/c8eb15c169cfaba69fec0b3e631e2241e0bdb7d5
+			systemctl disable kill-ssh-user-sessions-before-network 2> /dev/null
+			[[ -f /etc/systemd/system/kill-ssh-user-sessions-before-network.service ]] && rm /etc/systemd/system/kill-ssh-user-sessions-before-network.service
+			[[ -f /var/lib/dietpi/services/kill-ssh-user-sessions-before-network.sh ]] && rm /var/lib/dietpi/services/kill-ssh-user-sessions-before-network.sh
+			systemctl daemon-reload
+			systemctl enable dietpi-kill_ssh
 			# - dietpi-unsupported_terminal.sh: https://github.com/Fourdee/DietPi/issues/2347
 			[[ -f /etc/profile.d/dietpi-unsupported_terminal.sh ]] && rm /etc/profile.d/dietpi-unsupported_terminal.sh
 			# - Possible leftover from PREP:
@@ -1527,8 +1533,22 @@ Pin-Priority: -1' > /etc/apt/preferences.d/dietpi-docker_fix
 			#.dietpi-autostart_index removal, if zero: https://github.com/Fourdee/DietPi/pull/2343
 			[[ -f /DietPi/dietpi/.dietpi-autostart_index ]] && (( $(</DietPi/dietpi/.dietpi-autostart_index) == 0 )) && rm /DietPi/dietpi/.dietpi-autostart_index && [[ -f /boot/dietpi/.dietpi-autostart_index ]] && rm /boot/dietpi/.dietpi-autostart_index
 			#-------------------------------------------------------------------------------
+			#Resolve networking service order cycle on Jessie: https://github.com/Fourdee/DietPi/pull/2357#issuecomment-448276505
+			if (( $G_DISTRO < 4 )); then
+
+				G_USER_INPUTS=0 G_CONFIG_INJECT '#[[:blank:]]*Default-Start:' '# Default-Start:     1 2 3 4 5' /etc/init.d/networking '### BEGIN INIT INFO'
+				insserv -v -r networking
+				insserv -v -d networking
+
+			fi
+			#-------------------------------------------------------------------------------
 			#Disable coturn logging for existing installs: https://github.com/Fourdee/DietPi/pull/2333
 			grep -q '^aSOFTWARE_INSTALL_STATE\[168\]=2' /DietPi/dietpi/.installed && G_CONFIG_INJECT 'DAEMON_ARGS=' "DAEMON_ARGS='-c /etc/turnserver.conf -o -l stdout --no-stdout-log --simple-log'" /etc/default/coturn
+			#-------------------------------------------------------------------------------
+			#Remove nofail and x-systemd.automount option from /boot mount: https://github.com/Fourdee/DietPi/pull/2357#issuecomment-449177715
+			sed -i '\|[[:blank:]]/boot[[:blank:]]|s|,x-systemd.automount||' /etc/fstab
+			sed -i '\|[[:blank:]]/boot[[:blank:]]|s|,nofail||' /etc/fstab
+			systemctl daemon-reload
 			#-------------------------------------------------------------------------------
 
 		fi
