@@ -1,14 +1,15 @@
 [Unit]
 Description=DietPi-Boot
-#Order 3
+# Order 3
 Requires=dietpi-preboot.service
-After=dietpi-preboot.service network-online.target network.target networking.service
+After=dietpi-preboot.service network.target networking.service
+Before=getty@tty1.service getty.target
 
 [Service]
 Type=oneshot
 RemainAfterExit=yes
 StandardOutput=tty
-ExecStart=/bin/bash -c '/DietPi/dietpi/boot | tee /tmp/dietpi-boot.log'
+ExecStart=/bin/bash -c '/DietPi/dietpi/boot 2>&1 | tee /tmp/dietpi-boot.log'
 
 [Install]
 WantedBy=multi-user.target
