@@ -1,12 +1,17 @@
 [Unit]
-Description=dietpi-fs_partition_resize
-Before=dietpi-ramdisk.service
+Description=DietPi-FS_partition_resize
+# Order 0
+DefaultDependencies=false
+Wants=local-fs-pre.target
+After=systemd-remount-fs.service -.mount
+Before=var-swap.swap swap.target local-fs-pre.target
 
 [Service]
 Type=oneshot
 RemainAfterExit=no
-ExecStart=/bin/bash -c '/var/lib/dietpi/services/fs_partition_resize.sh | tee /var/tmp/dietpi/logs/fs_partition_resize.log'
 StandardOutput=tty
+ExecStartPre=/bin/mkdir -p /var/tmp/dietpi/logs
+ExecStart=/bin/bash -c '/var/lib/dietpi/services/fs_partition_resize.sh 2>&1 | tee /var/tmp/dietpi/logs/fs_partition_resize.log'
 
 [Install]
 WantedBy=local-fs.target
