@@ -1,0 +1,10 @@
+[Unit]
+Description=DietPi-Kill_SSH on shutdown
+DefaultDependencies=no
+
+[Service]
+Type=oneshot
+ExecStart=-/usr/bin/killall -qw dropbear sshd
+
+[Install]
+WantedBy=poweroff.target halt.target reboot.target
