@@ -1,15 +1,14 @@
 [Unit]
 Description=DietPi-PostBoot
-#Order 4
+# Order 4
 Requires=dietpi-boot.service
-After=dietpi-boot.service
-Before=rc-local.service rc.local.service
+After=dietpi-boot.service multi-user.target
 
 [Service]
 Type=idle
 RemainAfterExit=yes
-ExecStart=/bin/bash -c '/DietPi/dietpi/postboot'
 StandardOutput=tty
+ExecStart=/DietPi/dietpi/postboot
 
 [Install]
 WantedBy=multi-user.target
