@@ -1,15 +1,16 @@
 [Unit]
 Description=DietPi-PreBoot
-#Order 2
+# Order 2
 Requires=dietpi-ramdisk.service
-Before=network-pre.target
+Wants=network-pre.target
 After=dietpi-ramdisk.service dietpi-ramlog.service
+Before=network-pre.target
 
 [Service]
 Type=oneshot
 RemainAfterExit=yes
 StandardOutput=tty
-ExecStart=/bin/bash -c '/DietPi/dietpi/preboot | tee /tmp/dietpi-preboot.log'
+ExecStart=/bin/bash -c '/DietPi/dietpi/preboot 2>&1 | tee /tmp/dietpi-preboot.log'
 
 [Install]
 WantedBy=local-fs.target
