@@ -1,15 +1,13 @@
 [Unit]
 Description=DietPi-RAMlog
-#Order 1
-After=local-fs.target boot.mount tmp.mount
-Before=network-pre.target rsyslog.service syslog.service
+# Order 1
+Before=syslog.service rsyslog.service
 
 [Service]
 Type=forking
 RemainAfterExit=yes
-StandardOutput=tty
 ExecStartPre=/bin/mkdir -p /var/tmp/dietpi/logs
-ExecStart=/bin/bash -c '/boot/dietpi/func/dietpi-ramlog 0 &>> /tmp/dietpi-ramlog.log'
+ExecStart=/bin/bash -c '/boot/dietpi/func/dietpi-ramlog 0 &>> /var/tmp/dietpi/logs/dietpi-ramlog.log'
 ExecStop=/bin/bash -c '/DietPi/dietpi/func/dietpi-ramlog 1 &>> /var/tmp/dietpi/logs/dietpi-ramlog.log'
 
 [Install]
