@@ -1,10 +1,11 @@
+# Monitors loss of WiFi connection and automatically reconnects
 [Unit]
-Description=Monitors loss of WiFi connection and automatically reconnects
+Description=DietPi-WiFi-Monitor
 After=network.target network-online.target
 
 [Service]
 Type=simple
-ExecStart=/bin/bash -c /var/lib/dietpi/services/dietpi-wifi-monitor.sh
+ExecStart=/var/lib/dietpi/services/dietpi-wifi-monitor.sh
 
 [Install]
 WantedBy=multi-user.target
