@@ -1,12 +1,0 @@
-[Unit]
-Description=Shutdown all SSH sessions before network
-DefaultDependencies=no
-Before=network.target shutdown.target
-
-[Service]
-Type=oneshot
-RemainAfterExit=yes
-ExecStart=/bin/bash -c '/var/lib/dietpi/services/kill-ssh-user-sessions-before-network.sh'
-
-[Install]
-WantedBy=poweroff.target halt.target reboot.target
