@@ -16,20 +16,22 @@
 	#-------------------------------------------------------------------------------------
 	#Main
 	#-------------------------------------------------------------------------------------
+	echo "Checking connnection for: $ADAPTER via ping to default gateway every $TICKRATE seconds"
+
 	while :
 	do
 
 		# - Get current gateway for ping
 		URL_PING="$(ip r s 0.0.0.0/0 dev $ADAPTER | awk '{print $3}')"
 
-		echo "Checking connnection for: $ADAPTER via ping to $URL_PING"
+		[[ $G_DEBUG == 1 ]] && echo "Checking connnection for: $ADAPTER via ping to $URL_PING"
 		if ping -I $ADAPTER -c 1 $URL_PING; then
 
-			echo "Connection valid for: $ADAPTER"
+			[[ $G_DEBUG == 1 ]] && echo "Connection valid for: $ADAPTER"
 
 		else
 
-			echo "Detected connection loss: $ADAPTER. Reconnecting"
+			echo "Detected connection loss: $ADAPTER. Reconnecting..."
 			ifdown "$ADAPTER"
 			sleep 1
 			ifup "$ADAPTER"
