@@ -11,13 +11,14 @@ Changes / Improvements / Optimisations:
 - DietPi-Drive_Manager | Now allows to check & repair the boot file system and trigger it for root file system on next reboot: https://github.com/Fourdee/DietPi/issues/1740#issuecomment-388325204
 - DietPi-Software | Blynk: Reinstalls now preserve existing config files; New directory structure and blynk user (v6.19) is patched now as well to existing installs: https://github.com/Fourdee/DietPi/pull/2324
 - DietPi-Software | Plex Media Server: Updated to v1.14.0 on x86 images, switch to HTTPS ARM repo and automated locale switch to en_US.UTF-8: https://github.com/Fourdee/DietPi/issues/2294
-- DietPi-Software | Nextcloud Talk: Disable the very verbose coturn logging by default to reduce disk I/O. This can be overridden via /etc/turnserver.conf: https://github.com/Fourdee/DietPi/issues/2321
+- DietPi-Software | Nextcloud Talk: Disabled the very verbose coturn logging by default to reduce disk I/O. This can be overridden via /etc/turnserver.conf: https://github.com/Fourdee/DietPi/issues/2321
 - DietPi-Software | Deluge: UMask 002 applied to all downloads: https://github.com/Fourdee/DietPi/issues/2339
 - DietPi-Software | Netdata: Updated to v1.11.1 and now runs as user "netdata": https://github.com/Fourdee/DietPi/pull/2337
 - DietPi-Update | Added optional ability to automatically update DietPi, when updates are available. Please note, this is disabled by default.
 
 Bug Fixes:
 - DietPi-Software | ownCloud/Nextcloud (Talk): Resolved an issue, where occ/ncc commands could fail, if Redis server is not running: https://github.com/Fourdee/DietPi/issues/2321
+- General | Enhanced and fixed some issue with dependencies and boot order of DietPi systemd units: https://github.com/Fourdee/DietPi/pull/2357
 - General | AudioPhonics I-Sabre-K2M: Once the driver is compiled, it will no longer be recompiled. This prevents ALSA installs from re-compiling the driver each time.
 - General | Resolved an issue, where login with non-bash session caused an error message. Thanks to @Elijahg for reporting this issue: https://github.com/Fourdee/DietPi/issues/2347
 
